# hspell-gir

./: MAINTAINERS  Makefile.am  README.md  autogen.sh  configure.ac  hspell-gir.pc.in
examples/: Makefile.am  test.js  test.py  test.vala  test_c.vala
examples/hspell-gui/: Makefile.am  hspell-gui.py
examples/hspell-gui/grammer_rulls/: grammer_rulls.py
examples/hspell-gui/hlinguistics/: grammer.py  sentence.py  word.py  word_info.py
examples/hspell-gui/ui/: hspell-gui.ui
src/: Makefile.am  hspell-gir.vala
vapi/: Makefile.am  hspell.vapi  linginfo.vapi
